# QuantConnect

./: .gitignore  .importlinter  ARCHITECTURE.md  AlgorithmImports.py  COMPREHENSIVE_GUIDE.md  FINANCE_TERMS.md  QUICK_START_GUIDE.md  README.md  backtest.json  broadcom_short_put_strategy.py  example_usage.py  main.py  pyproject.toml  run_backtest.py  run_cli.py  run_cloud_backtest.py  run_simple_sell_put.py  setup_project.sh  strategy_config.py  test_criteria_context.py  test_criteria_integration.py  test_risk_manager_fix.py
Clone of Sell put/: main.py  simple_sell_put.py
Clone of Sell put/config/: __init__.py
Fat Asparagus Caterpillar/: main.py
Options Backtesting Strategy/: README.md  enhanced_broadcom_strategy.py  main.py  manage.py  setup.py
Sell put/config/: common_config_loader.py
Sell put/strategies/: __init__.py
config/: __init__.py  common_config_loader.py  covered_call_config.json  covered_call_stock.json  loader.py  sell_put_config.json  sell_put_custom_example.json  sell_put_multi_stock.json  sell_put_stock.json  sell_put_stock_example.json
core/: __init__.py  correlation_manager.py  data_handler.py  market_analyzer.py  option_utils.py  position_sizing.py  risk_manager.py  scheduler.py  technical_indicators.py
docs/: CRITERIA_INTEGRATION.md  CRITERIA_SYSTEM.md  TRADING_CONTEXT_SYSTEM.md
examples/: criteria_usage_example.py
quantconnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sell put option/: IMPROVEMENTS_GUIDE.md  config.json  config_loader.py  config_minimal.json  data_handler.py  evaluator.py  main.py  market_analyzer.py  position_manager.py  risk_manager.py  scheduler.py  trade_executor.py
shared/analysis/: __init__.py
shared/interfaces/: __init__.py  strategy_interface.py
shared/types/: __init__.py  strategy_types.py
shared/utils/: __init__.py  constants.py  correlation_manager.py  market_analysis_types.py  option_utils.py  position_utils.py  technical_indicators.py  trading_criteria.py
strategies/: __init__.py
strategies/covered_call/: context.py  covered_call_strategy.py
strategies/sell_put/: __init__.py  context.py  evaluator.py  main.py  portfolio_manager.py  position_manager.py  sell_put_strategy.py  stock_manager.py
tests/: README.md  __init__.py  run_tests.py
tests/core/: __init__.py  test_correlation_manager.py  test_data_handler.py  test_market_analyzer.py  test_risk_manager.py  test_scheduler.py
(+38 files in other folders)
